--- a/src/app/components/common/navbar/navbar.component.html
+++ b/src/app/components/common/navbar/navbar.component.html
@@ -1,3 +1,16 @@
-<p>
-  navbar works!
-</p>
+<nav className="navbar navbar-dark bg-primary">
+  <a className="navbar-brand" to="/">CMR-App. Welcome!</a>
+    <div className="my-2 my-sm-0">
+      <a className="btn btn-secondary my-2 my-sm-0" to="/signup">Sign Up</a>
+      <a className="btn btn-secondary my-2 my-sm-0" to="/login">Log In</a>
+    </div>
+    <div className="my-2 my-sm-0">
+      <h4>Hello, </h4>
+      <a className="btn btn-secondary my-2 my-sm-0" to="/shipments">Shipments</a>
+      <a className="btn btn-secondary my-2 my-sm-0" to="/createShipment">Create Shipment</a>
+      <a className="btn btn-secondary my-2 my-sm-0" to="/hauliers">Hauliers</a>
+      <a className="btn btn-secondary my-2 my-sm-0" to="/createHaulier">Create Haulier</a>
+      <a className="btn btn-secondary my-2 my-sm-0" to="/reminders">Reminders</a>
+      <button className="btn btn-secondary my-2 my-sm-0">Log Out</button>
+    </div>
+</nav>
