--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <navbar></navbar>
-<div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
-</div>
+<h1 class="text-center">
+  Welcome to the CMR App!
+  <br/>
+  <small class="text-muted">Please Sign Up or Log In</small>
+</h1>
