--- a/src/app/components/common/navbar/navbar.component.html
+++ b/src/app/components/common/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-dark bg-primary">
   <a class="navbar-brand" href="/">CMR-App. Welcome!</a>
     <div class="my-2 my-sm-0">
-      <a class="btn btn-secondary my-2 my-sm-0" href="/signup">Sign Up</a>
+      <a class="btn btn-secondary my-2 my-sm-0" routerLink="/signup">Sign Up</a>
       <a class="btn btn-secondary my-2 my-sm-0" href="/login">Log In</a>
     </div>
     <div class="my-2 my-sm-0">
