Update signup form binding

--- a/src/app/components/user/signup/signup.component.html
+++ b/src/app/components/user/signup/signup.component.html
@@ -24,7 +24,7 @@
           <div class="form-group">
               <label>
                   <h5>Last Name</h5>
-                  <input [(ngModel)]="user.lastName" type="text" class="form-control-lg" name="lastName" id="lastName" placeholder="Enter your last name" />
+                  <input [(ngModel)]="user.lastName" type="text" class="form-control-lg" name="lastName" id="lastName" placeholder="Enter your last name" required />
               </label>
           </div>
           <button type="submit" class="btn btn-primary">Submit</button>
