--- a/src/app/components/common/navbar/navbar.component.html
+++ b/src/app/components/common/navbar/navbar.component.html
@@ -1,16 +1,16 @@
 <nav class="navbar navbar-dark bg-primary">
   <a class="navbar-brand" routerLink="/">CMR-App. Welcome!</a>
-    <div class="my-2 my-sm-0">
+    <div *ngIf="!authToken" class="my-2 my-sm-0">
       <a class="btn btn-secondary my-2 my-sm-0" routerLink="/signup">Sign Up</a>
-      <a class="btn btn-secondary my-2 my-sm-0" href="/login">Log In</a>
+      <a class="btn btn-secondary my-2 my-sm-0" routerLink="/login">Log In</a>
     </div>
-    <div class="my-2 my-sm-0">
+    <div *ngIf="authToken" class="my-2 my-sm-0">
       <h4>Hello, </h4>
       <a class="btn btn-secondary my-2 my-sm-0" href="/shipments">Shipments</a>
       <a class="btn btn-secondary my-2 my-sm-0" href="/createShipment">Create Shipment</a>
       <a class="btn btn-secondary my-2 my-sm-0" href="/hauliers">Hauliers</a>
       <a class="btn btn-secondary my-2 my-sm-0" href="/createHaulier">Create Haulier</a>
       <a class="btn btn-secondary my-2 my-sm-0" href="/reminders">Reminders</a>
-      <button class="btn btn-secondary my-2 my-sm-0">Log Out</button>
+      <button (click)="logOut()" type="button" class="btn btn-secondary my-2 my-sm-0">Log Out</button>
     </div>
 </nav>
