--- a/src/app/components/common/navbar/navbar.component.html
+++ b/src/app/components/common/navbar/navbar.component.html
@@ -5,7 +5,7 @@
       <a class="btn btn-secondary my-2 my-sm-0" routerLink="/login">Log In</a>
     </div>
     <div *ngIf="authToken" class="my-2 my-sm-0">
-      <h4>Hello, </h4>
+      <h4>Hello, {{firstName}}</h4>
       <a class="btn btn-secondary my-2 my-sm-0" href="/shipments">Shipments</a>
       <a class="btn btn-secondary my-2 my-sm-0" href="/createShipment">Create Shipment</a>
       <a class="btn btn-secondary my-2 my-sm-0" href="/hauliers">Hauliers</a>
