--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<navbar [authToken]="authToken" [firstName]="loggedUser.firstName"></navbar>
+<navbar [authToken]="authToken" [firstName]="loggedUser.firstName" (logMeOut)="logOut($event)"></navbar>
 <h1 class="text-center">
   Welcome to the CMR App!
   <br/>
