Added shipment creation

--- a/src/app/components/common/navbar/navbar.component.html
+++ b/src/app/components/common/navbar/navbar.component.html
@@ -7,7 +7,7 @@
     <div *ngIf="authToken" class="my-2 my-sm-0">
       <h4>Hello, {{firstName}}</h4>
       <a class="btn btn-secondary my-2 my-sm-0" routerLink="/shipments">Shipments</a>
-      <a class="btn btn-secondary my-2 my-sm-0" href="/createShipment">Create Shipment</a>
+      <a class="btn btn-secondary my-2 my-sm-0" routerLink="/createShipment">Create Shipment</a>
       <a class="btn btn-secondary my-2 my-sm-0" href="/hauliers">Hauliers</a>
       <a class="btn btn-secondary my-2 my-sm-0" href="/createHaulier">Create Haulier</a>
       <a class="btn btn-secondary my-2 my-sm-0" href="/reminders">Reminders</a>
