Updated shipment creation

--- a/src/app/components/shipments/create-shipment/create-shipment.component.html
+++ b/src/app/components/shipments/create-shipment/create-shipment.component.html
@@ -6,7 +6,7 @@
       <div class="form-group">
           <label>
               <h6>Customer</h6>
-              <input [(ngModel)]="shipment.customer" type="text" class="form-control" id="customer" name="customer" placeholder="Enter customer company name" required />
+              <input [(ngModel)]="shipment.customer" type="text" class="form-control" id="customer" name="customer" placeholder="Enter customer company name" />
           </label>
       </div>
       <div class="form-group">
@@ -38,7 +38,7 @@
       <div class="form-group">
           <label>
               <h6>Delivery Date</h6>
-              <input [(ngModel)]="shipment.delivery_date" type="date" class="form-control" id="delivery-date" name="delivery-date" required />
+              <input [(ngModel)]="shipment.delivery_date" type="date" class="form-control" id="delivery-date" name="delivery-date" />
           </label>
       </div>
       <div class="form-group">
@@ -79,7 +79,7 @@
       <div class="form-group">
           <label>
               <h6>Project Resp. Person</h6>
-              <input [(ngModel)]="shipment.project_rep" type="text" class="form-control" id="project-resp" name="project-resp" placeholder="Enter project responsible person" required/>
+              <input [(ngModel)]="shipment.project_rep" type="text" class="form-control" id="project-resp" name="project-resp" placeholder="Enter project responsible person" />
           </label>
       </div>
       <div class="form-group">
