--- a/src/app/components/shipments/create-shipment/create-shipment.component.html
+++ b/src/app/components/shipments/create-shipment/create-shipment.component.html
@@ -38,7 +38,7 @@
       <div class="form-group">
           <label>
               <h6>Delivery Date</h6>
-              <input [(ngModel)]="shipment.delivery_date" type="date" class="form-control" id="delivery-date" name="delivery-date" />
+              <input [(ngModel)]="shipment.delivery_date" type="date" class="form-control" id="delivery-date" name="delivery-date" required />
           </label>
       </div>
       <div class="form-group">
