Added shipment edit

--- a/src/app/components/shipments/shipment-detail/shipment-detail.component.html
+++ b/src/app/components/shipments/shipment-detail/shipment-detail.component.html
@@ -50,7 +50,7 @@
       <div class="form-group">
           <label>
               <h6>Shipment ID</h6>
-              <input [(ngModel)]="shipment.shipment_id" type="string" class="form-control" id="shipment-id" name="shipment-id" required />
+              <input [(ngModel)]="shipment.shipment_id" type="string" class="form-control" id="shipment-id" name="shipment-id" disabled required />
           </label>
       </div>
       <div class="form-group">
