Added haulier edit

--- a/src/app/components/hauliers/hauliers/hauliers.component.html
+++ b/src/app/components/hauliers/hauliers/hauliers.component.html
@@ -13,7 +13,7 @@
         <td>{{haulier.name}}</td>
         <td>{{haulier.contactEmails.join('; ')}}</td>
         <td>
-          <a href="/hauliers/{{haulier._id}}">Open</a>
+          <a routerLink="/hauliers/{{haulier._id}}">Open</a>
         </td>
       </tr>
     </tbody>
