--- a/src/app/components/common/navbar/navbar.component.html
+++ b/src/app/components/common/navbar/navbar.component.html
@@ -10,7 +10,7 @@
       <a class="btn btn-secondary my-2 my-sm-0" routerLink="/createShipment">Create Shipment</a>
       <a class="btn btn-secondary my-2 my-sm-0" routerLink="/hauliers">Hauliers</a>
       <a class="btn btn-secondary my-2 my-sm-0" routerLink="/createHaulier">Create Haulier</a>
-      <a class="btn btn-secondary my-2 my-sm-0" href="/reminders">Reminders</a>
+      <a class="btn btn-secondary my-2 my-sm-0" routerLink="/reminders">Reminders</a>
       <button (click)="logOut()" type="button" class="btn btn-secondary my-2 my-sm-0">Log Out</button>
     </div>
 </nav>
