--- a/src/app/components/hauliers/hauliers/hauliers.component.html
+++ b/src/app/components/hauliers/hauliers/hauliers.component.html
@@ -1,6 +1,6 @@
 <div>
-  <h3>There are no hauliers to work with!</h3>
-  <table class="table table-hover table-responsive">
+  <h3 *ngIf="hauliers.length === 0">There are no hauliers to work with!</h3>
+  <table *ngIf="hauliers.length > 0" class="table table-hover table-responsive">
     <thead>
       <tr>
         <th scope="col">Haulier Name</th>
