--- a/src/app/components/shipments/shipments/shipments.component.html
+++ b/src/app/components/shipments/shipments/shipments.component.html
@@ -28,8 +28,8 @@
     </thead>
     <tbody *ngFor="let shipment of shipments">
       <tr>
-        <td>{{shipment.customer}}</td>
-        <td>{{shipment.haulier}}</td>
+        <td>{{shipment.customer | titlecase}}</td>
+        <td>{{shipment.haulier | titlecase}}</td>
         <td>{{shipment.trailer | uppercase}}</td>
         <td>{{shipment['loading-address']}}</td>
         <td>{{shipment['unloading-address']}}</td>
